fix missing border bottom on typeahead

--- a/main.css
+++ b/main.css
@@ -21,10 +21,6 @@ body {
   appearance:none;
 }
 
-select:focus {
-box-shadow: none !important;
-}
-
 .logo {
   height:50%;
   width:10%;
@@ -171,8 +167,6 @@ box-shadow: none !important;
   display: none;
 }
 
-*:focus {
-  outline: none;
+select:focus {
   box-shadow: none!important;
-  border:none!important;
 }
